--- a/FPTBook/appsettings.json
+++ b/FPTBook/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "FPTBookContextConnection": "Server=(localdb)\\mssqllocaldb;Database=FPTBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "MailSettings": {
+    "User": "nguyenmanhliet4@gmail.com",
+    "Name": "Cao Vĩnh Nguyên",
+    "Pass": "Chaunhat1989",
+    "Host": "smtp.gmail.com",
+    "Port": 587
   }
+
 }
